# functype-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
functype/: Cargo.toml
functype-core/: Cargo.toml  README.md
functype-core/src/: either.rs  fdo.rs  lib.rs  non_empty_vec.rs  option_ext.rs  prelude.rs  pure.rs  result_ext.rs  try_type.rs  tuple_ext.rs  validated.rs
functype-core/src/collections/: list.rs  map.rs
functype-io/: Cargo.toml  README.md
functype-io/src/: io.rs  lib.rs
functype-macros/: Cargo.toml
functype-macros/src/: lib.rs
functype/src/: lib.rs
