[workspace]
members = ["functype", "functype-core", "functype-io", "functype-macros"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jordanburke/functype-rs"

[workspace.dependencies]
# Internal crates
functype-core = { path = "functype-core", version = "0.1.0" }
functype-io = { path = "functype-io", version = "0.1.0" }
functype-macros = { path = "functype-macros", version = "0.1.0" }

# Runtime
rpds = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
pin-project-lite = "0.2"
thiserror = "2"

# Proc-macro
proc-macro2 = "1"
syn = { version = "2", features = ["full"] }
quote = "1"

# Dev
proptest = "1"
trybuild = "1"
