[package]
name = "functype-core"
description = "Core functional programming types for Rust"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror.workspace = true
rpds.workspace = true

[dev-dependencies]
proptest.workspace = true
