[package]
name = "functype-core"
description = "Core functional programming types for Rust"
readme = "README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror.workspace = true
rpds.workspace = true

[dev-dependencies]
proptest.workspace = true
