[package]
name = "functype-io"
description = "Lazy, composable IO effect type for functype"
readme = "README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
functype-core.workspace = true
tokio.workspace = true
anyhow.workspace = true
pin-project-lite.workspace = true
