[package]
name = "functype"
description = "Scala-inspired functional programming library for Rust"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
functype-core.workspace = true
functype-io.workspace = true
