[package]
name = "functype"
description = "Functional programming library for Rust"
readme = "../README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
functype-core.workspace = true
functype-io.workspace = true
